[gd_scene load_steps=8 format=3 uid="uid://dujvo01530ak0"]

[ext_resource type="Texture2D" uid="uid://dv5nhbwkow5yg" path="res://assets/cipo/pixil-frame-5.png" id="1_0bbap"]
[ext_resource type="Script" uid="uid://bywhowxldmv4g" path="res://scenes/fase/cipo.gd" id="1_75aim"]
[ext_resource type="AudioStream" uid="uid://im5r5dvoyays" path="res://audios/scream.wav" id="3_bx08o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bbap"]
radius = 4.1231055

[sub_resource type="Animation" id="Animation_bx08o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_75aim"]
resource_name = "balancar"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.2, 1.5, 1.8, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.6108652381980153, -0.4363323129985824, 0.4363323129985824, 0.6108652381980153, 0.4363323129985824, -0.4363323129985824, -0.6108652381980153]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vagp7"]
_data = {
&"RESET": SubResource("Animation_bx08o"),
&"balancar": SubResource("Animation_75aim")
}

[node name="Cipo" type="Node2D"]
scale = Vector2(2.9382327, 2.9382327)
script = ExtResource("1_75aim")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 1.021022)
texture = ExtResource("1_0bbap")
offset = Vector2(1, 63)

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 65.68576)
texture = ExtResource("1_0bbap")
offset = Vector2(1, 63)

[node name="AreaPegar" type="Area2D" parent="."]
position = Vector2(0, 66.366425)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPegar"]
position = Vector2(0, 78)
scale = Vector2(0.48268205, 0.48268205)
shape = SubResource("CircleShape2D_0bbap")

[node name="PontoSegurar" type="Marker2D" parent="."]
position = Vector2(0, 144.36642)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vagp7")
}

[node name="SomCipo" type="Node" parent="."]

[node name="SFX_scream" type="AudioStreamPlayer" parent="SomCipo"]
stream = ExtResource("3_bx08o")

[connection signal="body_entered" from="AreaPegar" to="." method="_on_area_pegar_body_entered"]
